--- a/src/components/View/Android/Header.css
+++ b/src/components/View/Android/Header.css
@@ -43,6 +43,12 @@
   color: rgba(255, 255, 255, .7);
   padding: 4px;
   }
+
+.View--android .View__header-left:empty,
+.View--android .View__header-right:empty {
+  display: none;
+  }
+
 .View--android .View__header-left:active,
 .View--android .View__header-right:active {
   color: #fff;
@@ -59,11 +65,6 @@
 
 .View--android .View__header-left:empty ~ .View__header-title {
   padding-left: 16px;
-  }
-
-.View__header-title {
-  flex-grow: 1;
-  max-width: 100%;
   }
 
 /**
