--- a/src/components/View/iOS/Header.css
+++ b/src/components/View/iOS/Header.css
@@ -30,7 +30,7 @@
       top: 20px;
       top: constant(safe-area-inset-top);
       top: env(safe-area-inset-top);
-      justify-content: center;
+      justify-content: space-between;
       padding: 0 6px;
       }
 
@@ -38,17 +38,40 @@
           width: 100%;
           }
 
-        .View--ios .View__header-title {
-          flex: 1 1 64%;
-          }
-
         .View--ios .View__header-left,
         .View--ios .View__header-right {
-          flex: 0 1 18%;
+          flex-shrink: 0;
           padding: 0 2px;
           }
 
+        .View--ios .View__header-left:empty,
+        .View--ios .View__header-right:empty {
+          display: none;
+          }
+
+          .View--ios .View__header-left-container {
+            display: flex;
+            align-items: center;
+            }
+
+          .View--ios .View__header-icon {
+            flex: 0 0 auto;
+            }
+
+            .View--ios .View__header-icon .HeaderButton__area {
+              position: absolute;
+              height: 100%;
+              width: 75px;
+              left: 0;
+              top: 0;
+              content: '';
+              display: block;
+              }
+
           .View--ios .View__header-left-in {
+            flex: 0 1 auto;
+            text-overflow: ellipsis;
+            overflow: hidden;
             line-height: 44px;
             }
 
